<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:title="@string/nav_item_fuentes" />
        <item
            android:id="@+id/navigation_item_images"
            android:title="@string/nav_item_estadisticas" />
        <item
            android:id="@+id/navigation_item_location"
            android:title="@string/nav_item_configuracion" />
    </group>

    <!--    android:icon="@drawable/ic_attachment"
            android:icon="@drawable/ic_place"

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>
-->
</menu>